--- a/my-flex-app/index.html
+++ b/my-flex-app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" translate="no">
+<html lang="en" translate="no" class="overflow-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="google" content="notranslate" />
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my-flex-app</title>
   </head>
-  <body>
+  <body class="overflow-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
