--- a/my-flex-app/index.html
+++ b/my-flex-app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="google" content="notranslate" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex panel</title>
   </head>
