--- a/my-flex-app/index.html
+++ b/my-flex-app/index.html
@@ -9,7 +9,9 @@
     <title>Flex panel</title>
   </head>
   <body class="overflow-hidden">
-    <div id="root"></div>
+    <div id="root" class="flex">
+
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
