--- a/my-flex-app/index.html
+++ b/my-flex-app/index.html
@@ -1,17 +1,23 @@
 <!doctype html>
 <html lang="en" translate="no" class="overflow-hidden">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="google" content="notranslate" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/png" href="favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flex panel</title>
-  </head>
-  <body class="overflow-hidden">
-    <div id="root" class="flex">
 
-    </div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="google" content="notranslate" />
+  <link rel="icon" type="image/png" href="favicon.png">
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Test flex tool">
+  <meta property="og:description" content="Test flex layout">
+  <meta property="og:url" content="https://github.com/oven425/QSoft.WPF.Panel/tree/master/my-flex-app/">
+  <meta property="og:image" content="https://oven425.github.io/assert/og_image.png">
+  <meta property="og:type" content="website">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Test flex tool</title>
+</head>
+
+<body class="overflow-hidden">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
